# MainLevelsEditor

./: .gitignore  CMakeLists.txt  CMakePostBuild.bat  CMakeSettings.json  CPM.cmake  README.md  Version.rc  about.md  mod.json
.github/workflows/: multi-platform.yml
Src/: CCMenuItemLabelExt.cpp  CCMenuItemLabelExt.hpp  Version.rc  _Main.cpp
Src/Layers/: CocosHeadersOnlyHookExample.cpp  CocosHeadersOnlyHookExample.hpp  CustomLayer.cpp  CustomLayer.hpp  PlayLayerExt.cpp  PlayLayerExt.hpp
_Headers/: Header1.hpp  ModUtils.hpp
_Headers/win32/: ModUtils.hpp  patterns.hpp
_Src/: FakeLevelPagesScroll.cpp  _ModCfg.cpp  _RepoSync.cpp  _YourLocalCfg.cpp  _controllers.cpp  _main.cpp  _ui.cpp  controllers.cpp  helpers.cpp  main.cpp  ui.cpp
_Src/win32/: ModUtils.cpp  patterns.cpp
bindings/bindings/2.204/: GeometryDash.bro
bindings/bindings/2.205/: GeometryDash.bro
bindings/scripts/: DumpVirtuals.java
bindings/scripts/ghidra/: Broma.java  CConv.java  InputParameters.java  InputWithButtonsDialog.java  PaddingInfo.java  Platform.java  Regexes.java  ScriptWrapper.java  Signature.java  SyncBromaScript.java
bindings/test/members/: CMakeLists.txt  Platform.cmake
src/: _a_autoupdate.cpp  _a_autoupdate.ncpp  _a_local_config.cpp  _a_package_config.cpp  _fs.hpp  _main.hpp  _updater.hpp  control_ui.cpp  editor.cpp  level_data.cpp  level_listing.cpp  on_load.cpp  songs.cpp
